--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,10 @@ import siteConfig from '@/site-config'
 
 <BaseLayout description={siteConfig.description}>
   <article class="prose">
-    <h1 class="text-title">Vitesse theme</h1>
-    <p>Vitesse theme for Astro, supports Vue and UnoCSS.</p>
+    <h1 class="text-title">Shad Mirza</h1>
+    <p>Full-stack Software Engineer and AWS Serverless Solution Architect</p>
     <p>
-      A minimal, SEO-riendly portfolio and blog theme for Astro. It's inspired by <a
-        target="_blank"
-        href="https://antfu.me">antfu.me</a
-      >.
+      Drawing from experience across modern web technologies, cloud platforms, and system architecture, I build end-to-end solutions that create lasting value. My passion for learning and natural curiosity drive me to stay at the forefront of technological innovation.
     </p>
     <p>
       <img width="640" height="360" src="/hero.jpg" alt="Hero Image" />
@@ -22,42 +19,7 @@ import siteConfig from '@/site-config'
       <b>make complex things as simple as possible</b>
       . So, the core of this theme is the content, and the other elements are just auxiliary.
     </p>
-    <p>Here are the features you don't need to worry about:</p>
-    <ul>
-      <li>100 / 100 Lighthouse performance</li>
-      <li>Responsive</li>
-      <li>SEO-friendly</li>
-      <li>Light / Dark Theme</li>
-      <li>Markdown support</li>
-      <li>
-        <a target="_blank" href="https://mdxjs.com/">MDX</a>
-        (components in your markdown) support
-      </li>
-      <li>
-        <a target="_blank" href="https://vuejs.org/">Vue</a>
-        SFC component support
-      </li>
-      <li>Auto generated sitemap and RSS Feed</li>
-      <li>
-        <a target="_blank" href="https://vueuse.org/">VueUse</a>
-        &
-        <a target="_blank" href="https://lodash.com/">Lodash</a>
-        support
-      </li>
-    </ul>
-    <p>
-      By the way, this theme use the <a target="_blank" href="https://unocss.dev/">UnoCSS</a> for style, it's fast.
-    </p>
-    <p>
-      Visit it
-      <a target="_blank" href="https://github.com/kieranwv/astro-theme-vitesse"> on GitHub </a>
-      to fork the repository, read the docs or one-click deploy on Netlify.
-    </p>
-    <p>
-      If you like Vitesse theme for Astro, please
-      <a target="_blank" href="https://github.com/kieranwv"> click follow </a>
-      for me.
-    </p>
+    <p>This section is coming soon...</p>
     <hr class="hr-line" />
     <p>Find me on</p>
     <p class="flex gap-x-4 gap-y-2 flex-wrap">
